# Course_work_3

./: .gitignore  README.md  main.py  pyproject.toml  test.json
tests/: test_main.py
utils/: data_func.py  utils.py
