[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Alexandr Lebedev <alexandr.lebedev.sp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
